resources/sass/calendar/inputs.scss
/* ... */
.inter-month-name{
    flex:3.9 1 auto !important;
}

.internal-list-name, .internal-list-name{
    width:100% !important;
}

.event-category-list{
    flex: 1;
    order:2;
}

.week_list, .cycle_list{
    width:100%;
    max-height:350px;
    overflow-y:scroll;
}

.open-edit-event-ui{
    text-align: left;
    height:100%;
    flex-grow: 1;
    line-height: 23px;
    border:0;
    cursor: pointer;
    display:block;
    overflow: hidden;
    font-size:0.8em;
    color: $accent-color-light;

    &:hover {
        color: white;
        background-color: $accent-color-light;
    }
}

.remove-container{
    width:100%;
    z-index:10;
    pointer-events: none;
    display: flex;
    align-items: center;
}

.remove-container-text{
    text-align: center;
    display:none;
    margin:auto;
    font-size:11pt;
    order: 2;
    flex-grow: 1;
}

.remove-container > .btn_remove, .remove-container > .btn_cancel, .remove-container > .btn_accept{
    pointer-events: auto;
    height:40px;
    width:40px;
    border-radius: 0;
    padding: 7px 0 0;
    font-size:13pt;
    cursor: pointer;
}

.remove-container > .btn_remove {
    position: absolute;
    right: 2px;
    top: 4px;
}

.remove-container > .btn_cancel{
    display:none;
    order: 3;
}

.remove-container > .btn_accept{
    left:0;
    display:none;
    order: 1;
}

.remove-container > .handle{
    cursor: move;
}

.add_inputs{
    width:100%;
    margin:5px 0 10px 0;
}

.moon_inputs .moon_color{
    width:0;
    order:2;
    flex:2 1 auto;
}

#location_select{
    width:100%;
    font-size:0.85rem;
}

#copy_location_data{
    margin-bottom:10px;
}

.view_type {
    height: auto;
}

.separator, .spacey_separator{
    width:100%;
    border: 0.5px solid rgba(166, 168, 179, 0.32);
    height: 1px;
    margin-bottom: 5px;
}

.spacey_separator{
    margin:10px 0 15px 0;
}

.wrap-collapsible{
    width: 94%;
    margin: auto;
}

.location_season{
    width:100%;
}

@media screen and (max-width: 768px) {
    #input_container,#input_container.sidebar-mobile-half:not(.inputs_collapsed) {
        width: 100vw;
        max-width: initial;
        min-width: initial;
    }
    #calendar_container:not(.inputs_collapsed) {
        width: 0;
        flex-grow: 0;
        padding: 0;
    }
}

.wrap-collapsible > input[type='checkbox']{
    display: none;
}

.title-text{
    font-weight: bold;
    font-size: 2rem;
    line-height: 4rem;
}

.lbl-text{
    font-weight: bold;
    font-size: 1.1rem;
}
.small-lbl-text{
    font-size: 0.9rem;
}

.lbl-toggle {
    display: block;
    user-select: none;
    margin:0;
    cursor: pointer;

    &:hover {
        background-color: rgba(0, 0, 0, 0.06);
    }
}

.setting{
    font-size:0.85rem;
}

.lbl-toggle:hover .wiki, .setting:hover .setting-question{
    display:inline;
}

.lbl-toggle.disabled::before{
    display:none;
}

.wiki, .setting-question{
    float: right;
    color: $wiki-link-color;
    text-decoration: none; /* no underline */
}

.wiki:hover, .setting-question:hover{
    color: $wiki-link-hover-color;
    text-decoration: none; /* no underline */
}

.collapsible-content {
    width:100%;
    max-height: 0;
    overflow: hidden;
}

.toggle:checked + .lbl-toggle + .collapsible-content {
    max-height: 100%;
    padding: 1.25rem;
}

.toggle:checked + .lbl-toggle {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

.collapsible-content .content-inner {
    background: rgba(250, 224, 66, .2);
    border-bottom: 1px solid rgba(250, 224, 66, .45);
    border-bottom-left-radius: 7px;
    border-bottom-right-radius: 7px;
    padding: .5rem 1rem;
}

.custom-checkbox {
    min-height: 1rem;
    padding-left: 0;
    margin-right: 0;
    cursor: pointer;
    margin-bottom: 0;

}

@media(max-width: 768px) {
    .custom-checkbox.flexible {
        transform: rotate(90deg) scale(1.4);
        margin: 30px 0;
    }
}
.custom-checkbox .custom-control-indicator {
    content: "";
    display: inline-block;
    position: relative;
    width: 30px;
    height: 10px;
    background-color: #818181;
    border-radius: 15px;
    -webkit-transition: background .0s ease;
    transition: background .0s ease;
    vertical-align: middle;
    box-shadow: none;
}
.custom-checkbox .custom-control-indicator:after {
    content: "";
    position: absolute;
    display: inline-block;
    width: 18px;
    height: 18px;
    background-color: #f1f1f1;
    border-radius: 21px;
    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4);
    left: -2px;
    top: -4px;
    -webkit-transition: left .0s ease, background .0s ease, box-shadow .1s ease;
    transition: left .0s ease, background .0s ease, box-shadow .1s ease;
}
.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator {
    background-color: #818181;
    background-image: none;
    box-shadow: none !important;
}
.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator:after {
    background-color: #84c7c1;
    left: 15px;
}
.custom-checkbox .custom-control-input:focus ~ .custom-control-indicator {
    box-shadow: none !important;
}

.disabled{
    background-color: $input-disabled-color;
}

.form-check{
    padding-left:2rem !important;
}

/* ------------------ Event forms ----------------- */

#event_comment_mastercontainer .trumbowyg{
    height: 150px;
    max-height: 150px;
    min-height: 150px;
}

#event_comments.loading{
    background-image: url('/resources/icons/loader_black.png');
    height:35px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

#event_comments.empty{
    font-style: italic;
}

#event_comments{
    display: flex;
    flex-direction: column;
    width:100%;
}

.event_comment{
    margin-bottom:0.5em;
    padding: 1rem;
    border: 1px solid $calendar-border-color;
}

.event_comment.calendar_owner .username{
    font-weight:800;
}

.event_comment.comment_owner{
    background-color: rgba($blue, 0.3);
}

.event_comment:last-child{
    margin-bottom:0;
}
/* ... */

